# near-guest-book-smart-contract

./: Cargo.toml  README.md
src/: lib.rs
tests/: sandbox.rs
